--- a/Journal/Daily/2024-08-05.md
+++ b/Journal/Daily/2024-08-05.md
@@ -10,46 +10,59 @@ auteur:
 
 ## Summary of yesterday's entry
 
-For dinner, I had grilled chicken with vegetables, and I would grade the day an 8 out of 10. I was on time for work and did take a shower. In the morning, I tackled some emails and attended a team meeting. The afternoon was spent working on a key project, and after work, I went for a jog. In the evening, I relaxed with a good book. Today, I felt more attuned to my emotions, particularly during an unexpected stressful moment where I managed to stay calm. I am proud of completing the project successfully, a step up from yesterday's smaller task of sorting paperwork. Today I focused more on self-care by taking breaks and not overworking, which improved my productivity and well-being. The most worthwhile activity was the jog; it cleared my mind and boosted my mood. I identified my tendency to procrastinate as a habit needing change and managed to start working on tasks earlier in the day. Today, I learned the importance of balancing work with self-care. For tomorrow, I plan to continue this balance and perhaps start a new book.
-
 ## Questions about yesterday
-
-1. You mentioned reflecting on your emotions and any significant changes throughout the day. Can you describe a specific moment when you felt a notable shift in your emotions, and what factors might have contributed to that change?
-
-2. Looking at your accomplishment today, can you detail what the achievement was and why it stood out to you? How did it compare to what you were proud of yesterday in terms of difficulty and impact?
-
-3. Regarding the most worthwhile activity you engaged in, can you elaborate on what this activity was and how it aligns with your long-term goals or personal values? What made it feel particularly fulfilling or valuable to you?
 
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
-**Were you on time for work?**:
+**What did you have for dinner**: Kapsalon (from the donner company on central station)
+**Grade for the day**: 7
+**Were you on time for work?**: yes
 
 ## What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+**Morning**: worked on making the current project future prove
+**Afternoon**: extended a feature already in the project
+**Evening**: went to `Deadpool and Wolverine`
 
 ## Reflections
 
-1. Reflecting on today, what were the moments where you felt most in tune with your emotions? How did they compare to yesterday's experience of staying calm during stress?
+1. Reflecting on today, what moments did you feel most in tune with your emotions?
+I took a walk through the city after the movie. Partly to process the film and partly because it had been a while since I had been in the city. I decided not to wear my headphones and that left me alone with my thoughts, which was nice
 
 2. What are you proud of accomplishing today? Was it a step up from yesterday's key project, and why?
+I implemented a medium-difficulty feature in one day. Which is better than expected because I did not know the codebase.
 
 3. Did you find a balance between giving to others and taking time for yourself today? How did this balance impact your overall well-being compared to yesterday?
+My work on the project is a mix of two aspects. On one hand, I'm responsible for maintenance, which involves adding and repairing features in the program. On the other hand, I have a deep love for improving the application, and keeping it up-to-date with the latest technology. This passion keeps me engaged and motivated.
 
-4. What was the most worthwhile activity you did today, and how did it benefit you? How does it compare to yesterday's jog?
+I love doing the second part. The first part is also ok. 
 
-5. Identify any habits that you noticed today that either hindered or supported your goals. How do these compare to the procrastination habit you identified yesterday, and what steps did you take to address them?
+I stood fast and told the people that I needed to do the second part in addition to the first part.
 
-## What did you learn today?
+5. What was your most worthwhile activity today, and how did it benefit you? How does it compare to yesterday's jog?
+I watched an awesome movie I wanted to do it for a while.
 
--
+7. Identify any habits you noticed today that hindered or supported your goals. 
+Only doing what you like is bad for the project's overall progress.
 
 ## The dump
 *dump any thoughts here*
 
+Somehow, Deadpool and Wolverine managed to add to the gigantic task of watching the MCU.
+
+To watch this movie, you would need to watch the following.
+
+- MCU films and movies
+- xmen + the new xman + logan
+- blade universe
+- the prevoius two deadpools
+- old and new Fantastic 4
+- daredevil and Electra movies
+- some comics
+
+watching the new MCU movies is a daunting task, but Deadpool takes it to a new level
 ## Plans for Tomorrow
+
+First actual session with a psychologist.
+
+return of an old project
