--- a/Journal/Daily/2024-08-06.md
+++ b/Journal/Daily/2024-08-06.md
@@ -1,56 +1,60 @@
----
-tags:
-  - Journal
-created: 2024-08-06
-auteur:
-  - ChatGPT 4-o
-  - Me
----
 # Journal entry for Tuesday, 2024-08-06
 
 ## Summary of yesterday's entry
 
-Yesterday, for dinner, I had grilled chicken with vegetables. I would grade the day a B+. I managed to be on time for work. In the morning, I completed a series of important emails and reports. The afternoon was spent in meetings, which were productive but slightly exhausting. After work, I went for a relaxing walk, and in the evening, I cooked and watched a movie. Reflecting on the day, I felt most in tune with my emotions during my walk as it allowed me to unwind; this was similar to how staying calm during stress felt yesterday. I am proud of successfully navigating challenging meetings, a notable improvement from the progress made on the key project yesterday. Balancing giving to others and self-care helped maintain my well-being more effectively than yesterday. The most worthwhile activity was the walk, which offered relaxation similarly beneficial to yesterday’s jog. I noticed that taking regular breaks improved my productivity, contrasting with yesterday's procrastination issue, and I actively used a timer to manage this. Today, I learned the importance of structured breaks for maintaining energy and focus. In the dump section, I noted needing to address some pending personal errands. Plans for tomorrow include completing these errands and continuing with my current projects.
+Yesterday, I had kapsalon for dinner from the donner company at Central Station and rated the day a 7. I was on time for work, spending my morning future-proofing our project and my afternoon extending a feature. I ended the day by watching "Deadpool and Wolverine" and took a reflective walk through the city afterward without headphones. Despite being unfamiliar with the codebase, I felt proud of implementing a medium-difficulty feature in one day. Balancing my responsibilities and passion projects at work kept me engaged and motivated. Watching the movie was fulfilling, though it highlighted the overwhelming task of keeping up with the MCU. Tomorrow, I have my first session with a psychologist and will revisit an old project.
 
 ## Questions about yesterday
 
-1. Your entry about finding balance between giving to others and taking time for yourself is intriguing. Can you describe a specific situation from today where you actively made a choice to either give to others or focus on yourself? How did you feel in that moment, and what was the outcome?
+1. You mentioned walking through the city after the movie to process the film and be alone with your thoughts. Can you elaborate on what particular aspects of the movie you found most thought-provoking and how the walk helped you process them?
 
-2. You mentioned being proud of an accomplishment today. Can you delve further into what this accomplishment was? How did it build on the key project you worked on yesterday, and what specific steps did you take to achieve it?
+Somehow, this silly movie made me a bit emotional. While Deadpool is very influential in his timeline, he does not feel like that, and I can relate to that.
 
-3. Reflecting on the habits you noticed today, could you elaborate on any that particularly stood out, either positively or negatively? How did you address those habits today compared to how you dealt with procrastination yesterday?
+I also just like waking through the city and taking in the sights and sounds
+
+2. You accomplished implementing a medium-difficulty feature in a day despite unfamiliar with the codebase. Could you describe the feature in more detail and share any specific challenges you faced during the process? How did this compare to similar tasks you've handled in the past?
+
+One of the challenges I faced was my unfamiliarity with the code base. 
+I was looking for the controller for the search endpoint, but when I found it, there was no implementation.
+it turns out that the implementation is provided by the projects that use the shared API,
+
+but I did not know this, so I called for help, which is difficult for me. to ask a 5-second question. Because I was three klicks removed from the file where the implementation was
+
+3. You have listed many movies and comics required to appreciate "Deadpool and Wolverine fully." How do you feel about this extensive requirement, and do you plan to revisit or watch any of those titles shortly?
+
+I'm medium up to speed on the MCU. Only last year have I been slacking, so I have recognized most of it.
 
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
-**Were you on time for work?**:
-**Did you shower?**:
+**What did you have for dinner**: wraps
+**Grade for the day**: 7
+**Were you on time for work?**: yes
+**Did you shower?**: No, I will do it tomorrow morning
 
 ## What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+**Morning**: worked a bit more on IBIS maintenance
+**Afternoon**: I got started on WANDA again
+**After work**: played horizon forbidden west
+**Evening**: played more Horizon Forbidden West
 
 ## Reflections
 
-1. Reflecting on today's experiences, when did I feel most connected with my feelings and emotions? How does this compare to yesterday's walk and staying calm under stress? 
-
-2. What achievements or moments from today make me feel proud? How do they build on successfully navigating yesterday's challenging meetings?
-
-3. In what ways did I balance self-care and giving to others today? How did my approach compare to yesterday's practice of maintaining well-being?
-
-4. What was the most worthwhile activity I engaged in today? Reflect on its impact on my day compared to yesterday's walk.
-
-5. Considering my progress in eliminating bad habits, how did today's use of structured breaks with a timer influence my productivity? Did this method help as effectively as it did yesterday?
-
 ## What did you learn today?
 
--
+- I learned about cognitive behavior therapy
+- and the psychologist introduced some weird eyeball therapy
 
 ## The dump
 *dump any thoughts here*
 
+I need to do more active relexing, like taking a walk. But to get motivated, I could do OSM with it. But am I then mixing relaxing with my insatiable need for productivity?
+
+I need to discover my core values (or life rules, values I hold dear), but I am still determining how i'm going to find those.
+can you include this question in tomorrow's entry 
+
 ## Plans for Tomorrow
+
+Have a meeting for WANDA about the UI
+
+I need to take Monday next week off.
