--- a/Journal/Daily/2024-07-06.md
+++ b/Journal/Daily/2024-07-06.md
@@ -1,10 +1,10 @@
 ---
 tags:
- - Journal
+  - Journal
 created: 2024-07-06
-auteur:
- - ChatGPT 4-o
- - Me
+author:
+  - ChatGPT 4-o
+  - Me
 ---
 # Journal entry for Saturday, 2024-07-06
 
