--- a/Journal/Daily/2024-08-25.md
+++ b/Journal/Daily/2024-08-25.md
@@ -2,7 +2,7 @@
 tags:
   - Journal
 created: 2024-08-25
-auteur:
+author:
   - ChatGPT 4-o
   - Me
 ---
@@ -10,47 +10,42 @@ auteur:
 
 ## Summary of yesterday's entry
 
-Yesterday, I had pasta for dinner and rated the day as a solid 8 out of 10. I managed to be on time for work. In the morning, I completed several tasks efficiently, and the afternoon was focused on a critical team meeting. After work, I went for a run, and spent the evening reading a new book. Reflecting on the day, I woke up feeling refreshed with no lingering emotions from the previous day. To align with my goals, I made sure to advocate for my ideas during the team meeting without feeling guilty. I felt especially proud when I hit a personal best on my run. A productive activity was preparing tomorrow's presentation, which made me feel accomplished. However, I did catch myself procrastinating at times and reminded myself to stay focused. From the day's experiences, I learned the importance of advocating for oneself confidently. My random thoughts included planning a weekend getaway. For tomorrow, I plan to finalize the presentation and start a new project.
+No summary
 
 ## Questions about yesterday
 
-1. In the "What did you do today?" section, could you elaborate on the specific activities or events that occurred during your morning, afternoon, after work, and evening? Detailing what you did during each part of the day can help provide a clearer picture of how your day unfolded.
 
-2. In reflecting on your actions that align with your goals of being more egotistical in a positive way, could you provide more specific examples or scenarios where you prioritized yourself? What were the situations, and how did you feel about the outcomes?
-
-3. For the "What did you learn today?" section, could you specify at least one key takeaway or insight you gained from today's experiences? Whether it's a personal revelation, a practical skill, or a piece of knowledge, sharing this can give more depth to your reflection.
 
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
-**Were you on time for work?**:
-**Did you shower?**:
+**What did you have for dinner**: Something matthijs made
+**Grade for the day**: 7
+**Did you shower?**: No I will do this tommoro morinig.
 
 ## What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+**Morning**: slept in
+**Afternoon**: played horizon forbiden west, worked on my story
+**Evening**: made a rough planning for my japan trip
 
 ## Reflections
 
-1. Reflecting on today, how did you feel in different situations, especially compared to yesterday when you felt refreshed and guilt-free after advocating for your ideas? Did you notice any recurring emotions throughout the day?
-
-2. Identify a moment from today where you felt especially proud of yourself. How does this compare to the pride you felt after achieving your personal best on your run yesterday?
-
-3. Analyze your actions and interactions today. Did you manage to balance giving to others and taking for yourself, similar to how you advocated for your ideas during the team meeting yesterday?
-
-4. What worthwhile activity did you do today that made you feel accomplished? How does it compare to the productivity you felt while preparing your presentation last night?
-
-5. Identify any procrastination or bad habits you noticed today. How did they impact your day, and what steps can you take tomorrow to avoid them, considering you reminded yourself to stay focused yesterday?
-
 ## What did you learn today?
 
--
+- I learned abou susuca cirqite
+- 
 
 ## The dump
 *dump any thoughts here*
 
+I can seem to keep a habbit to save my life
+
 ## Plans for Tomorrow
+
+work on IBIS. 
+
+take out the sutures out of my knee.
+
+work on the markdown parser
+
+work out how Im going to tack my mood
