--- a/Journal/Daily/2024-08-25.md
+++ b/Journal/Daily/2024-08-25.md
@@ -18,34 +18,34 @@ No summary
 
 ## What happened today?
 
-**What did you have for dinner**: Something matthijs made
+**What did you have for dinner**: Something Matthijs made
 **Grade for the day**: 7
-**Did you shower?**: No I will do this tommoro morinig.
+**Did you shower?**: No, I will do this tomorrow morning.
 
 ## What did you do today?
 
 **Morning**: slept in
-**Afternoon**: played horizon forbiden west, worked on my story
-**Evening**: made a rough planning for my japan trip
+**Afternoon**: played Horizon Forbidden West, worked on my story
+**Evening**: I made a rough plan for my Japan trip
 
 ## Reflections
 
 ## What did you learn today?
 
-- I learned abou susuca cirqite
+- I learned about the Suzuka circuit
 - 
 
 ## The dump
 *dump any thoughts here*
 
-I can seem to keep a habbit to save my life
+I can seem to keep a habit to save my life.
 
 ## Plans for Tomorrow
 
-work on IBIS. 
+Work on IBIS. 
 
-take out the sutures out of my knee.
+Take the sutures out of my knee.
 
-work on the markdown parser
+Work on the markdown parser.
 
-work out how Im going to tack my mood
+Work out how I am going to track my mood.
