--- a/Journal/Daily/2024-08-26.md
+++ b/Journal/Daily/2024-08-26.md
@@ -2,7 +2,7 @@
 tags:
   - Journal
 created: 2024-08-26
-auteur:
+author:
   - ChatGPT 4-o
   - Me
 ---
@@ -10,53 +10,52 @@ auteur:
 
 ## Summary of yesterday's entry
 
-For dinner, I had pasta and salad. I would grade the day a B+. I was on time for work and took a shower in the morning. The morning started with a productive meeting, followed by a busy but manageable afternoon of project tasks. After work, I went for a quick workout and spent the evening relaxing with a book. Reflecting on the day, I felt consistently calm and focused, a contrast to yesterday's excitement. I felt proud of successfully leading an important presentation, similar to the pride of achieving my running personal best yesterday. I balanced my interactions well, similar to advocating my ideas in the team meeting. Completing a complex project made me feel accomplished, akin to the productivity from last night's presentation prep. I noticed some procrastination with minor tasks, affecting my efficiency. I plan to minimize distractions tomorrow to avoid this. 
-
-In summary, today was a productive and balanced day, marked by calm and focus, a successful presentation, and some minor procrastination to address.
+Yesterday, I started the day by sleeping in, spent the afternoon playing Horizon Forbidden West and working on my story, and in the evening, I made a rough plan for my Japan trip. Dinner was something Matthijs made. I learned about the Suzuka circuit and reflected on my struggles with maintaining habits. For tomorrow, I plan to work on IBIS, remove the sutures from my knee, continue developing a markdown parser, and figure out a system for tracking my mood. I gave the day a grade of 7 and decided to shower the following morning.
 
 ## Questions about yesterday
 
-1. Can you elaborate more on the activities you did in the morning, afternoon, after work, and evening? Were there any specific events or tasks you found particularly significant or challenging?
+1. You mentioned that you made a rough plan for your Japan trip in the evening. Could you share more details about the plan? For instance, what specific places or activities are you considering including in your itinerary?
+Well we only made a plan for when and how long we will be going. and it seems to all be pined around the Japan gp
 
-2. In reflecting on your emotions throughout the day, you mentioned feeling refreshed and guilt-free after advocating for your ideas yesterday. Can you describe in more detail how today's emotions compared, and in what situations these feelings arose?
+2. You noted that you played Horizon Forbidden West and worked on your story in the afternoon. Could you elaborate on what part of the game you enjoyed the most, and what progress you made with your story?
 
-3. You noted a sense of achievement after creating your presentation last night. What specific activity today did you feel most accomplished about, and how did it contribute to your overall sense of productivity and satisfaction?
+I like the story of the game in combination with the setting. it also helps that I feel good at the game although I properbly play at a easy level. 
 
+3. In your reflections, you mentioned learning about the Suzuka circuit. What aspects of the Suzuka circuit did you find most interesting or surprising, and how did you come across this information?
+well during our japan trip we would like to vitsit the gp and for me its importent to know what i will be waking in to so I mostly liked to see what the vibe is a the circute
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
-**Were you on time for work?**:
+**What did you have for dinner**: some other stuff my mom made
+**Grade for the day**: 7
+**Were you on time for work?**: I worked from home so technicly yes 
 
 ## What did you do today?
 
-**Morning**: 
-**Afternoon**: 
+**Morning**: worked on a high priority case for IBIS
+**Afternoon**: when to the dematologist, to take out my sutures 
 **After work**: 
 **Evening**: 
 
 ## Reflections
 
-1. **Feelings and Awareness:**
-   Reflecting back on today, how did your emotions shift throughout different activities? Were there moments when you became more aware of how you felt, similar to the calm and focus you described yesterday?
+1. Reflecting on yesterday's activities, how did you feel during each part of your day? Were there any moments when you felt particularly proud or accomplished? 
+I am still not familiar with Ibis and still I solved a lot of puzzels today.
+and better jet I emediatly provided feedback to the stakeholders about the status
 
-2. **Self-Pride:**
-   Did you experience moments of pride today? How do these compare to the feelings of pride from successfully leading the presentation and achieving your personal best in running, as noted yesterday?
+2. Did you manage to do something that you found worthwhile yesterday? How did working on your story, making the Japan trip plan, or learning about the Suzuka circuit contribute to this feeling?
+Im taking the inishiative in the Japan trip which feels nice.
 
-3. **Balanced Self-Interest:**
-   How did you ensure you took some time for yourself today? Reflect on any moments where you balanced giving and taking, similar to advocating your ideas in team meetings. Did you struggle with or succeed in this effort?
-
-4. **Worthwhile Endeavors:**
-   What was one worthwhile thing you did today that you found particularly meaningful? Compare this to the sense of accomplishment you felt from completing the complex project yesterday.
-
-5. **Habit Awareness and Change:**
-   Identify any instances of procrastination or bad habits today. Did you make any attempts to minimize distractions and improve efficiency as you planned yesterday? How successful were these attempts, and what can you do differently tomorrow?
+3. Were there any habits you noticed yourself struggling with today? Identify one specific bad habit you want to focus on today and brainstorm a strategy for addressing it.
+- going to bed on time. I went too late
+- waking up in time. I was awake but decided not to go to work
+- I Journaled late again today
+- I did not do any of the exercises from my psycologist
 
 ## What did you learn today?
 
--
-
+- I learned how dificult they made ibis
+- taking out stuers does not hurt that mutch
 ## The dump
 *dump any thoughts here*
-
+the extract from my knee was all clear it was not cancer
 ## Plans for Tomorrow
