--- a/Journal/Daily/2024-08-26.md
+++ b/Journal/Daily/2024-08-26.md
@@ -10,52 +10,62 @@ author:
 
 ## Summary of yesterday's entry
 
-Yesterday, I started the day by sleeping in, spent the afternoon playing Horizon Forbidden West and working on my story, and in the evening, I made a rough plan for my Japan trip. Dinner was something Matthijs made. I learned about the Suzuka circuit and reflected on my struggles with maintaining habits. For tomorrow, I plan to work on IBIS, remove the sutures from my knee, continue developing a markdown parser, and figure out a system for tracking my mood. I gave the day a grade of 7 and decided to shower the following morning.
+Yesterday, I started the day by sleeping in, spent the afternoon playing Horizon Forbidden West and working on my story, and in the evening, I made a rough plan for my Japan trip. Dinner was something Matthijs made. I learned about the Suzuka circuit and reflected on my struggles with maintaining habits. Tomorrow, I plan to work on IBIS, remove the sutures from my knee, continue developing a markdown parser, and figure out a system for tracking my mood. I gave the day a grade of 7 and decided to shower the following morning.
 
 ## Questions about yesterday
 
 1. You mentioned that you made a rough plan for your Japan trip in the evening. Could you share more details about the plan? For instance, what specific places or activities are you considering including in your itinerary?
-Well we only made a plan for when and how long we will be going. and it seems to all be pined around the Japan gp
+Well, we only made a plan for when and how long we will be going. And it seems to all be pinned around the Japan GP.
 
-2. You noted that you played Horizon Forbidden West and worked on your story in the afternoon. Could you elaborate on what part of the game you enjoyed the most, and what progress you made with your story?
+2. You noted that you played Horizon Forbidden West and worked on your story in the afternoon. Please elaborate on what part of the game you enjoyed the most and what progress you made with your story.
 
-I like the story of the game in combination with the setting. it also helps that I feel good at the game although I properbly play at a easy level. 
+I like the story of the game, combined with the setting. It also helps that I feel good about the game, although I probably play at an easy level.
 
 3. In your reflections, you mentioned learning about the Suzuka circuit. What aspects of the Suzuka circuit did you find most interesting or surprising, and how did you come across this information?
-well during our japan trip we would like to vitsit the gp and for me its importent to know what i will be waking in to so I mostly liked to see what the vibe is a the circute
+
+Well, during our Japan trip, we would like to visit the GP, and for me, it is important to know what I will be walking into, so I mostly liked to see what the vibe is at the circuit.
+
 ## What happened today?
 
 **What did you have for dinner**: some other stuff my mom made
 **Grade for the day**: 7
-**Were you on time for work?**: I worked from home so technicly yes 
+**Were you on time for work?**: I worked from home, so technically, yes
 
 ## What did you do today?
 
-**Morning**: worked on a high priority case for IBIS
-**Afternoon**: when to the dematologist, to take out my sutures 
-**After work**: 
-**Evening**: 
+**Morning**: worked on a high-priority case for IBIS
+**Afternoon**: when to the dermatologist to take out my sutures
+**After work**:
+**Evening**:
 
 ## Reflections
 
-1. Reflecting on yesterday's activities, how did you feel during each part of your day? Were there any moments when you felt particularly proud or accomplished? 
-I am still not familiar with Ibis and still I solved a lot of puzzels today.
-and better jet I emediatly provided feedback to the stakeholders about the status
+1. How did you feel during yesterday's activities during each part of your day? Were there any moments when you felt particularly proud or accomplished?
+I am still unfamiliar with Ibis, and I still solved many puzzles today.
+Better yet: I immediately provided feedback to the stakeholders about the status
 
 2. Did you manage to do something that you found worthwhile yesterday? How did working on your story, making the Japan trip plan, or learning about the Suzuka circuit contribute to this feeling?
-Im taking the inishiative in the Japan trip which feels nice.
+I'm taking the initiative on the Japan trip, which feels nice.
 
 3. Were there any habits you noticed yourself struggling with today? Identify one specific bad habit you want to focus on today and brainstorm a strategy for addressing it.
+
 - going to bed on time. I went too late
 - waking up in time. I was awake but decided not to go to work
 - I Journaled late again today
-- I did not do any of the exercises from my psycologist
+- I did not do any of the exercises from my psychologist
 
 ## What did you learn today?
 
-- I learned how dificult they made ibis
-- taking out stuers does not hurt that mutch
+- I learned how difficult they made ibis
+- taking out sutures does not hurt that much
+
 ## The dump
+
 *dump any thoughts here*
 the extract from my knee was all clear it was not cancer
+
 ## Plans for Tomorrow
+
+work some more on IBIS
+Meet for scouting about the new season
+hopefully, work on the markdown parser
