--- a/Journal/Daily/2024-08-27.md
+++ b/Journal/Daily/2024-08-27.md
@@ -15,32 +15,38 @@ Yesterday, I had a dinner prepared by my mom and rated the day a 7. Working from
 ## Questions about yesterday
 
 1. When you mentioned that you "solved many puzzles today" while working on IBIS, can you describe one specific puzzle or challenge you faced and how you approached solving it? 
+well im new to the code and its dificult to find what I need in the project. and when i can find what i need then the problems are mostly not my fault
 
 2. How did your visit to the dermatologist go? Can you share more details about what happened during the appointment and how you felt afterward, especially considering your other health concerns?
+It was very quick and only good news so it was ok. I did how ever did not plan well enough for the appointment so I was nearly late which made me sloppy in execution. 
+
+I felt the same with todays pyscologist apointment. When im late I forget to apply deoaderant or i leave without stuff.
 
 3. You noted struggling with several habits, like going to bed on time and journaling late. Have you thought of any specific strategies that might help you address these habits? Could you elaborate on one or two ideas that you think could be effective?
+I changed position of the qr code to turn off my alarm so that will help me with waking up.
 
 4. You indicated that "taking out sutures does not hurt that much" and "the extract from my knee was all clear." Can you provide more context about these health concerns and how you are feeling about your overall health now that you have this information?
-
+I had a weird mole on my knee that they cut out and it came back clean for cancer
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
-**Were you on time for work?**: 
-**Did you shower?**:
+**What did you have for dinner**: someting with rucola monsarella and some weird pasta
+**Grade for the day**: 7
+**Were you on time for work?**: technicly no because I had a psychologist appointment
+**Did you shower?**: no but i need to do that tomorrow
 
 ## What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+**Morning**: psychologist appointment
+**Afternoon**: worked on the five rules of wanda
+**After work**: tried a new writing software
+**Evening**: had a scouting meeting and finaly worked on the markdown parser
 
 ## Reflections
 
 **Daily Reflection**
 
 1. Reflect on today's events: How did you feel throughout the day, and can you pinpoint any specific moments when you became more aware of your feelings than usual?
+   no
    
 2. Identify a moment or accomplishment today that made you proud. How did it contribute to your overall sense of self-worth?
    
@@ -58,3 +64,5 @@ Yesterday, I had a dinner prepared by my mom and rated the day a 7. Working from
 *dump any thoughts here*
 
 ## Plans for Tomorrow
+need a new plan for my closet
+need to buy a suite
