--- a/Journal/Daily/2024-08-28.md
+++ b/Journal/Daily/2024-08-28.md
@@ -15,43 +15,79 @@ Yesterday, I had dinner featuring arugula, mozzarella, and an unusual pasta. Alt
 ## Questions about yesterday
 
 1. Can you describe the "weird pasta" you had for dinner in more detail? What made it stand out or seem unusual to you?
+well it had an unusual shape. it was like a circle rolled with a spone into a shell
 
 2. How did your psychologist appointment go? Were there any insights or discussions that particularly resonated with you?
+well yes I wrote them down:
+
+met de psycholog heb ik het gehad over mijn ochtend ritueel en wij hebben het gevoel dat ik een beter ritueel nodig heb.
+
+dus we hebben het bolgende afgesproken 
+
+- ik ga ombojten sochtens
+- 15 min eerder op
+- kleding opruimen
+- qr code verplaatsen
+- 
+
+
+ik wis wel dat ombijt belangrijk is maar ik heb jet altijd verplaats omdat ik yijd nodig had
+
+
 
 3. You mentioned working on "the five rules of Wanda" in the afternoon. Can you elaborate on what that project entails and what progress you made?
+Its a catch phrase I have for the last five rules I need to implement. but I cant elaberate on them because its propriatary software
 
 4. During your scouting meeting and work on the markdown parser in the evening, were there any challenges or interesting discoveries that you encountered?
-
+well it was all a bit boring. altough unit test saved the day again and LLMs are usefull tools
 ## What happened today?
 
-**What did you have for dinner**: 
-**Grade for the day**: 
-**Were you on time for work?**: 
+**What did you have for dinner**: chicken from Ikea
+**Grade for the day**: 7
+**Were you on time for work?**: No, I was stuck in traffic
 
 ## What did you do today?
 
-**Morning**: 
-**Afternoon**: 
-**After work**: 
-**Evening**: 
+**Morning**: Talked abit about IBIS and review a PR
+**Afternoon**: implemented one of the five rules of wanda
+**After work**: went to IKEA to buy a closet for in my closet
+**Evening**: build the new closet
 
 ## Reflections
 
 1. Reflecting on the "five rules of Wanda" you worked on yesterday, how do they connect with your current goals, especially in terms of being more aware of your feelings and taking pride in yourself? 
+Well I think that its a hard problem and I think I tougroly solved it.
 
 2. In what ways did you manage to integrate a moment of self-care or self-recognition into your day? How could you enhance this practice to be more egotistical (in a positive way) moving forward?
+well, I curently employ the statagy of working hard to get things in order to then relex.
+
+the new closet is a domino that will help me clean up.
+
+the shelves provide space for my cloths.
+those clothes can than be moved from crates in my rome
+and the crate I can use to sort and store all the mess in my rome
 
 3. How did your activities today contribute to doing something worthwhile? Was there a particular task or experience that stood out as fulfilling? 
+I have the feeling that most of life is just buzy work that keeps repeating.
+keeping thing clean and tidy is one of the major things that show this to me.
+
+I feel that cleaning is kind of useless and still we have to do it everyday
 
 4. Considering the bad habits you want to define and eliminate, did any resurface today? If so, how did you handle them, and what strategies can you implement to counteract them more effectively?
+Im still going to bed too late.
+the ticktock were ok tody
 
 5. Reflecting on your previous day's intention to buy a suit and plan a new closet, how did these goals progress today? What steps did you take that you're proud of, and what can you plan for tomorrow to further these personal goals?
+I boght a closet. the suite i need to do tomorrow
 
 ## What did you learn today?
 
--
+- Building IKEA futue is easy.
+- wounds with resently removed sutures are very weak
+- if you api sucks than the rest of the progam also sucks
 
 ## The dump
 *dump any thoughts here*
 
 ## Plans for Tomorrow
+buy a suite
