update CWO documentation, add new resources, and correct typos

--- a/scouting/cwo/cwo-kielboot-eisen.mediawiki
+++ b/scouting/cwo/cwo-kielboot-eisen.mediawiki
@@ -1,4 +1,4 @@
-Op deze pagina staat de informatie over de eisen voor het Kielblootzeilen voor CWO Kielboot 1, 2 en 3 opgedeeld zo als beschreven in CWO Handboek Opleidingen van 2015
+Op deze pagina staat de informatie over de eisen voor het Kielbootzeilen voor CWO Kielboot 1, 2 en 3 opgedeeld zo als beschreven in CWO Handboek Opleidingen van 2015
 
 De huidige eisen zijn niet openbaar beschikbaar.
 
